Add layer navigation

--- a/composer.json
+++ b/composer.json
@@ -72,9 +72,10 @@
         "mageplaza/magento-2-seo-extension": "^4.1",
         "mageplaza/magento-2-social-login": "^4.1",
         "mageplaza/magento-2-vietnamese-language-pack": "dev-master",
+        "mageplaza/module-ajax-layered-navigation": "^4.0",
         "mageplaza/module-lazy-loading": "^4.0",
         "mageplaza/module-sitemap": "^4.0",
-        "mageplaza/module-smtp": "^4.6",
+        "mageplaza/module-smtp": "^4.0",
         "monolog/monolog": "^1.17",
         "oxcom/magento2-top-products": "^1.1",
         "paragonie/sodium_compat": "^1.6",
