--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "ext-zip": "*",
         "lib-libxml": "*",
         "boolfly/module-momo-wallet": "^1.0",
+        "boolfly/module-zalopay": "^1.0",
         "colinmollenhour/cache-backend-file": "~1.4.1",
         "colinmollenhour/cache-backend-redis": "1.11.0",
         "colinmollenhour/credis": "1.11.1",
