Add product question

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "ext-xsl": "*",
         "ext-zip": "*",
         "lib-libxml": "*",
+        "boolfly/module-blog": "^1.0",
         "boolfly/module-zalopay": "^1.0",
         "colinmollenhour/cache-backend-file": "~1.4.1",
         "colinmollenhour/cache-backend-redis": "1.11.0",
